corrected the buttons on the homepage so that they can be aligned-centered. Fixed the Home Button on the Aloo Posto page and added it it the Arroz Con Pollo Page.

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
     background-color:rgb(250, 239, 192);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(75, 102, 0);
+    font-weight: bold;
 }
 
 .header{
@@ -48,11 +49,12 @@
 }
 .container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     align-content: center;
+    gap: 18px;
 }
 
 
@@ -92,36 +94,45 @@
     align-content: center;
 }
 
-/* pollo */
+#back{
+    text-decoration: none;
+    font-style: italic;
+    font-weight: bolder;
+}
+#back:hover{
+    color: rgba(0, 0, 0, 0.384);
+}
 
-#polloheader{ 
+
+
+/* pollo */
+.center{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(75, 102, 0);
-    font-size:  65px;
-
 }
-#polloimg{
-    text-align:center;
+#top{
+    font-weight: bold;
+    font-size: 65px;
 }
-#pollo{
-    text-align: center;
-    text-decoration-line: underline;
-    color: rgb(75, 102, 0);
+#Home{
+    text-decoration: none;
+    font-style: italic;
+    font-weight: bolder;
 }
-.p{
-   text-align: center; 
-   color: rgb(40, 54, 1);
+#Home:hover{
+    color: rgba(0, 0, 0, 0.384);
 }
-.h{
-    text-align: center;
-    text-decoration-line: underline;
-    color: rgb(75, 102, 0);
+#Father{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
-.list{
-    color: rgb(40, 54, 1);  
+.start{
+    text-decoration:underline;
 }
-
 /* Chicken Nuggets */
 
 .text{
